styles/index.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

:root {
    --c-orange: hsl(40, 84%, 53%);
    --c-blue: hsl(230, 89%, 65%);
    --c-red: hsl(349, 70%, 56%);
    --c-purple: hsl(261, 72%, 63%);
    --c-cyan: hsl(189, 58%, 57%);
}

html {
    max-width: 100vw;
    max-height: 100vh;
    overflow-x: hidden;
}

body {
    font-family: "Barlow Semi Condensed", sans-serif;
    font-weight: 600;
    color: hsl(0, 0%, 87%);
    font-size: 18px;
}

input, textarea, button {
    font: inherit;
    text-transform: inherit;
    color: inherit;
}

button {
    cursor: pointer;
    letter-spacing: inherit;
}

.d-none {
    display: none;
}

.flex {
    display: flex;
}

.align-between {
    justify-content: space-between;
}

.align-center {
    justify-content: center;
}

.valign-center {
    align-items: center;
}

.wide-spacing {
    letter-spacing: 2px;
}

/* ----------------------------------- */

.app__content {
    min-width: 100vw;
    min-height: 100vh;
    overflow: hidden;
    background: radial-gradient(circle at top, hsl(214, 47%, 23%), hsl(237, 49%, 15%));
    padding: 30px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.game__container {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.game__panel {
    border: 2px solid hsl(217, 16%, 45%);
    border-radius: 10px;
    padding: 20px 20px 20px 30px;
    width: 700px;
    max-width: 100%;
    position: relative;
    z-index: 2;
}

.game__score {
    background-color: hsl(0, 0%, 98%);
    padding: 10px 50px;
    border-radius: 10px;
    text-align: center;
}

.game__field {
    display: flex;
    justify-content: center;
    padding: 55px 0;
}

.game__rules-btn {
    display: flex;
    justify-content: flex-end;
    flex-wrap: wrap;
    padding: 0 30px;
}

.rules__img {
    margin-top: 20px;
}

/* ----------------------------------- */

.uppercase {
    text-transform: uppercase;
}

.fs-large {
    font-size: 60px;
}

.fw-bold {
    font-weight: bold;
}

.color-blue {
    color: hsl(229, 64%, 46%);
}

.color-dark {
    color: hsl(229, 25%, 31%);
}

.mb-10 {
    margin-bottom: 50px;
}

.mt-10 {
    margin-top: 50px;
}

.mt-4 {
    margin-top: 20px;
}

.mr-4 {
    margin-right: 20px;
}

/* ----------------------------------- */

.score-val {
    color: hsl(229, 25%, 31%);
    font-weight: bold;
    font-size: 60px;
    display: inline-block;
}

.score-val.to-left {
    animation: score-to-left 400ms ease forwards;
}

.score-val.to-right {
    animation: score-to-right 400ms ease forwards;
}

.score-val.from-left {
    animation: score-from-left 400ms ease forwards;
}

.score-val.from-right {
    animation: score-from-right 400ms ease forwards;
}

@keyframes score-to-left {
    to {
        transform: translateX(-32px);
        opacity: 0;
    }
}

@keyframes score-to-right {
    to {
        transform: translateX(32px);
        opacity: 0;
    }
}

@keyframes score-from-left {
    from {
        transform: translateX(-32px);
        opacity: 0;
    }
}

@keyframes score-from-right {
    from {
        transform: translateX(32px);
        opacity: 0;
    }
}

@media (max-width: 1020px) {
    body {
        font-size: 16px;
    }

    .game__field {
        padding: 40px 0;
    }

    .game__rules-btn {
        justify-content: center;
    }

    .game__score {
        padding: 10px 20px;
    }

    .game__logo {
        width: 55px;
    }

    .game__panel {
        padding: 20px;
    }

    .score-val {
        font-size: 32px;
    }

    .fs-large {
        font-size: 50px;
    }
}

@media (max-width: 460px) {
    #start-recognition {
        order: 2;
        margin-right: 0;
        margin-top: 10px;
    }
}

